--- a/css/main.css
+++ b/css/main.css
@@ -1,33 +1,30 @@
 .container {
     display: inline-block;
-    width: 1300px;
+    width: 1450px;
     margin-top: 200px;
-    margin-left: calc(50% - 400px);
+    margin-left: calc(50% - 500px);
+    text-align: center;
 }
 
 div.first {
     width: 200px;
-    height: 200px;
     float: left;
     margin-right: 50px;
 }
 
 div.second {
     width: 200px;
-    height: 200px;
     float: left;
     margin-right: 50px;
 }
 
 div.third {
     width: 200px;
-    height: 200px;
     float: left;
     margin-right: 50px;
 }
 
 div.fourth {
     width: 200px;
-    height: 200px;
     float: left;
 }
